--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matt-tingen/eslint-config",
-  "version": "0.2.4",
+  "version": "0.2.5-rc0",
   "repository": "github:matt-tingen/eslint-config",
   "author": "Matt Tingen <matt.tingen@gmail.com>",
   "main": "index.js",
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^3.0.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.4",
