--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jest-dom": "^3.2.4",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-testing-library": "^3.10.0",
     "prettier": "^2.0.5"
   },
   "devDependencies": {
