--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@types/eslint": "^7.2.4",
     "eslint": "^7.13.0",
     "typescript": "^4.0.5"
+  },
+  "resolutions": {
+    "@typescript-eslint/parser": "4.6.1"
   }
 }
