--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "typescript": "^4.0.5"
   },
   "resolutions": {
-    "@typescript-eslint/parser": "4.6.1"
+    "eslint-config-airbnb-typescript/@typescript-eslint/parser": "^4.6.1"
   }
 }
