--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matt-tingen/eslint-config",
-  "version": "0.3.0",
+  "version": "0.3.1-rc1",
   "repository": "github:matt-tingen/eslint-config",
   "author": "Matt Tingen <matt.tingen@gmail.com>",
   "main": "index.js",
