--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.5.0",
-    "prettier": "^2.3.0"
+    "eslint-plugin-testing-library": "^4.5.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.11",
     "eslint": "^7.26.0",
+    "prettier": "^2.3.0",
     "typescript": "^4.2.4"
   },
   "resolutions": {
