--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,6 @@
     "import/no-extraneous-dependencies": "off",
     "@typescript-eslint/no-var-requires": "off",
     "no-undef": "error"
-  }
+  },
+  "env": { "node": true }
 }
