--- a/package.json
+++ b/package.json
@@ -1,36 +1,62 @@
 {
   "name": "@matt-tingen/eslint-config",
-  "version": "0.11.0-rc1",
+  "version": "0.12.0",
   "repository": "github:matt-tingen/eslint-config",
   "author": "Matt Tingen <matt.tingen@gmail.com>",
-  "main": "index.js",
   "license": "MIT",
+  "type": "module",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsup src/index.ts --clean --dts --format esm,cjs",
+    "ts": "tsc --noEmit",
+    "lint": "eslint --ext .ts,.tsx src",
+    "format": "prettier --write src",
+    "prepack": "pnpm ts && pnpm lint && pnpm build"
+  },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.7.2",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^3.8.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-import-type-only": ">=1.0.0",
-    "eslint-plugin-jest": "^27.6.3",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-testing-library": "^6.2.0"
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import-type-only": "^1.0.2",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prefer-arrow-functions": "^3.6.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^0.11.4",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "eslint-plugin-unicorn": "^57.0.0",
+    "typescript-eslint": "^8.26.1"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.4",
-    "typescript": "^5.3.3"
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.13.10",
+    "@typescript-eslint/utils": "^8.26.1",
+    "eslint": "^9.22.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2"
   },
   "peerDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^9.22.0"
   }
 }
