--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ts": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx src",
     "format": "prettier --write src",
-    "prepack": "pnpm ts && pnpm lint && pnpm build"
+    "preversion": "pnpm ts && pnpm lint && pnpm build",
+    "postversion": "pnpm publish && git push && git push --tags"
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
