--- a/package.json
+++ b/package.json
@@ -29,21 +29,16 @@
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
+    "@matt-tingen/util": "^3.2.0",
     "@stylistic/eslint-plugin": "^4.2.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^3.8.4",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-import-type-only": "^1.0.2",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-jest-dom": "^5.5.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prefer-arrow-functions": "^3.6.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^0.11.4",
-    "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unicorn": "^57.0.0",
     "typescript-eslint": "^8.26.1"
   },
